samples/_failures_safe/1761086586_6ff698_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e85e37d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3e85e37d.c:147:13: error: expected expression at end of input
  147 |             char delim[
      |             ^~~~
./samples/SAFE/__tmp_3e85e37d.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e85e37d.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3e85e37d.c:147:13: error: expected declaration or statement at end of input
